# llm-gateway-python

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
loadtest/: completions.js  health.js
src/gateway/: __init__.py  config.py  main.py
src/gateway/api/: __init__.py  models.py  routes.py
src/gateway/observability/: __init__.py  logging.py  middleware.py
src/gateway/persistence/: __init__.py  cost_log.py  pricing.py
src/gateway/providers/: __init__.py  anthropic.py  base.py  errors.py  gemini.py
src/gateway/router/: __init__.py  circuit_breaker.py  router.py
